--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <p>Welcome! Please select a client:</p>
         <div class="buttons">
-            <button onclick="selectClient('index1')">Client 1</button>
-            <button onclick="selectClient('index2')">Client 2</button>
+            <button onclick="selectClient('./index1')">Client 1</button>
+            <button onclick="selectClient('./index2')">Client 2</button>
         </div>
     </div>
 
